# RealtimeFaceAlignment

./: CMakeLists.txt  main.cpp
lib/opencv4/: libopencv_calib3d.so.4.2.0  libopencv_face.so.4.2  libopencv_imgcodecs.so.4.2.0
